fix: Don't show arrows on mobile

--- a/client/Modals/CartModal/elems/RelatedProductsSection/RelatedProductsSection.module.css
+++ b/client/Modals/CartModal/elems/RelatedProductsSection/RelatedProductsSection.module.css
@@ -33,6 +33,12 @@
   margin-top: var(--space-l);
 }
 
+@media (--mobile-m) {
+  .arrows {
+    display: none;
+  }
+}
+
 @media (--mobile) {
   .head,
   .wrapperGallery {
